--- a/01 - Responsive Web Developer/01-404-not-found/package.json
+++ b/01 - Responsive Web Developer/01-404-not-found/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
+    "static": "next build && next export && touch ./out/.nojekyll && echo 'www.mywebsite.com' > ./out/CNAME",
     "start": "next start",
     "lint": "next lint"
   },
