--- a/01 - Responsive Web Developer/01-404-not-found/package.json
+++ b/01 - Responsive Web Developer/01-404-not-found/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "static": "next build && next export && touch ./out/.nojekyll && gh-pages -d out -t true",
+    "static": "next build && next export && touch ./out/.nojekyll",
     "start": "next start",
     "lint": "next lint"
   },
